# identify-ip

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/identify_ip/: __about__.py  __init__.py  idip.py
