[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "identify-ip"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Nathan Anderson", email = "nathanea05@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["requests>=2.31"]

[project.urls]
Documentation = "https://github.com/Nathan Anderson/identify-ip#readme"
Issues = "https://github.com/Nathan Anderson/identify-ip/issues"
Source = "https://github.com/Nathan Anderson/identify-ip"

[project.scripts]
identify-ip = "identify_ip.idip:main"
idip = "identify_ip.idip:main"

[tool.hatch.build.targets.wheel]
packages = ["src/identify_ip"]

[tool.hatch.version]
path = "src/identify_ip/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/identify_ip tests}"

[tool.coverage.run]
source_pkgs = ["identify_ip", "tests"]
branch = true
parallel = true
omit = [
  "src/identify_ip/__about__.py",
]

[tool.coverage.paths]
identify_ip = ["src/identify_ip", "*/identify-ip/src/identify_ip"]
tests = ["tests", "*/identify-ip/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
